--- a/project3_RojasMarco.html
+++ b/project3_RojasMarco.html
@@ -4,21 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-    <div id="input-fields">
-        <label for="val1">Value 1:</label>
-        <input type="text" id="val1" name="val1"><br><br>
-        <label for="val2">Value 2:</label>
-        <input type="text" id="val2" name="val2"><br><br>
-        <label for="val3">Value 3:</label>
-        <input type="text" id="val3" name="val3"><br><br>
-        <button onclick="performArithmetics()">Submit</button>
-    </div>
-    <div>
-        <p id="statusDisplay"></p>
-    </div>
+
+
+
+    <div class="container text-center">
+        <div class="row">
+          <div class="col-sm-12">
+            <p id="statusDisplay"></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm">        
+            <label for="val1">Value 1:</label>
+            <input class="form-control" type="text" placeholder="Value 1" aria-label="default input example" id="val1">
+          </div>
+          <div class="col-sm">
+            <label for="val1">Value 2:</label>
+            <input class="form-control" type="text" placeholder="Value 2" aria-label="default input example" id="val2">
+          </div>
+          <div class="col-sm">
+            <label for="val1">Value 3:</label>
+            <input class="form-control" type="text" placeholder="Value 3" aria-label="default input example" id="val3">
+          </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <button type="button" class="btn btn-secondary btn-lg" onclick="performArithmetics()">Calculate</button>
+
+            </div>
+      </div>
+
+
     <script src="./scripts/index.js"></script>
 
 </body>
